--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,17 @@ h1 {
   font-size: 2.8rem;
   font-weight: 700;
 }
+.main-para{
+  font-weight:200;
+  margin:50%;
+  padding:15%;
+}
+
+.main-heading{
+  font-weight:200;
+  margin:50%;
+  padding:15%;
+}
 
 h2 {
   color: #ffffff;
